pedro_respaldiza/session1/exercise03/mariadb-svc.yaml
# Exercise 3 of session 1: Mariadb deployment
# Pedro Ignacio Respaldiza Hidalgo (aka Iñaki Respaldiza)
# K8s Training user: pedro_respaldiza
---
kind: Service
apiVersion: v1
metadata:
  name: mariadb
  namespace: exercise-03
spec:
  type: ExternalName
  externalName: kubernetes-training.cfxyxg2jnovx.us-east-1.rds.amazonaws.com
