pedro_respaldiza/session1/exercise03/wordpress.yaml
# Exercise 3 of session 1: Mariadb deployment
# Pedro Ignacio Respaldiza Hidalgo (aka Iñaki Respaldiza)
# K8s Training user: pedro_respaldiza
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: exercise-03
  labels:
    app: wordpress
    type: frontend
spec:
  selector:
    app: wordpress
    type: frontend
  ports:
  - name: http-sv-port 
    port: 80
    targetPort: http-port
  - name: https-sv-port
    port: 443
    targetPort: https-port
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-03
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:4.9.2-r1
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
