pedro_respaldiza/session1/exercise03/wordpress-ingress.yaml
# Exercise 3 of session 1: Mariadb deployment
# Pedro Ignacio Respaldiza Hidalgo (aka Iñaki Respaldiza)
# K8s Training user: pedro_respaldiza
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: exercise-03
  labels:
    app: wordpress
    type: frontend
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ^~ /k8sadmin {return 301 http://wordpress-exercise-03.com/wp-login.php;}
      location ^~ /wp-admin {return 301 http://wordpress-exercise-03.com/404;}
spec:
  tls:
  - hosts:
    - wordpress-exercise-03.com
    secretName: ingress-secret
  rules:
  - host: wordpress-exercise-03.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: http-sv-port
